# author-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml
author/: Cargo.toml
author-axum/: Cargo.toml
author-axum/src/: lib.rs  session.rs  user.rs
author-oauth/: Cargo.toml
author-web/: Cargo.toml
author-web/src/: lib.rs  store.rs
author-web/src/session/: mod.rs
author-web/src/session/store/: in_memory.rs  mod.rs
author-web/src/user/: mod.rs
author/src/: lib.rs
author/src/rbac/: config.rs  mod.rs
examples/author-axum/: Cargo.toml
examples/author-axum-session/: Cargo.toml
examples/author-axum-session/src/: main.rs
examples/author-axum/src/: main.rs
examples/axum-session/: Cargo.toml
examples/axum-session/src/: main.rs
examples/axum-session/src/schema/: auth_session.rs  auth_user.rs  mod.rs
examples/policy/: Cargo.toml
