[package]
name = "author-axum"
version = "0.1.0"
description = "Author web integrations for Axum"
authors = ["Sean Burton <seanjburton@gmail.com>"]
repository = "https://github.com/sburton84/author-rs"
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sburton84/author-rs"

[features]

[dependencies]
author-web = { version = "0.1.0", path = "../author-web" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-private"] }
futures = "0.3"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tower = "0.5"
tower-layer = "0.3"
tower-service = "0.3"
tower-util = "0.3"
uuid = "1"
