[package]
name = "author-oauth"
version = "0.1.0"
description = "OAuth authentication integration"
authors = ["Sean Burton <seanjburton@gmail.com>"]
repository = "https://github.com/sburton84/author-rs"
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sburton84/author-rs"

[dependencies]
