[package]
name = "author-web"
version = "0.1.0"
description = "Common code for Author web integrations"
authors = ["Sean Burton <seanjburton@gmail.com>"]
repository = "https://github.com/sburton84/author-rs"
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sburton84/author-rs"

[features]

[dependencies]
anyhow = "1"
author = { path = "../author" }
cookie = "0.17"
rand = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
