[package]
name = "author-web"
version = "0.1.0"
description = "Common code for Author web integrations"
authors = ["Sean Burton <seanjburton@gmail.com>"]
repository = "https://github.com/sburton84/author-rs"
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sburton84/author-rs"

[features]
default = ["in-memory"]
in-memory = ["uuid"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
author = { path = "../author" }
cookie = { version = "0.18", features = ["secure"] }
parking_lot = "0.12"
rand = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4"], optional = true }
