[package]
name = "author-axum-session-example"
version = "0.1.0"
description = "Demonstrates Author session handling in Axum"
authors = ["Sean Burton <seanjburton@gmail.com>"]
repository = "https://github.com/sburton84/author-rs"
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sburton84/author-rs"

[features]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
author-axum = { path = "../../author-axum" }
author-web = { path = "../../author-web" }
sea-orm = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.4"
