[package]
name = "author-policy-example"
version = "0.1.0"
description = "Demonstrates Author policies"
authors = ["Sean Burton <seanjburton@gmail.com>"]
repository = "https://github.com/sburton84/author-rs"
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sburton84/author-rs"

[features]

[dependencies]
anyhow = "1"
assert_matches = "1"
author = { path = "../../author" }
